# alliance

./: README.md
alliance/alliance/: __main__.py  alliance.py  template.py
alliance/alliance/documentation/: openai.json
alliance_cli/: pyproject.toml  runner.py  setup.py
alliance_cli/alliance_cli/: cli.py
alliance_cli/env/: pyvenv.cfg
alliance_cli/env/Scripts/: activate  activate.bat
